deploy of loadtest updated