@@ -34,6 +34,12 @@ docker -H satsrv05:2375 build -t webofneeds/gencert:int $WORKSPACE/webofneeds/wo
 docker -H satsrv06:2375 build -t webofneeds/gencert:int $WORKSPACE/webofneeds/won-docker/gencert/
 docker -H satsrv07:2375 build -t webofneeds/gencert:int $WORKSPACE/webofneeds/won-docker/gencert/
 
+# bots
+docker -H satsrv04:2375 build -t webofneeds/bots:int $WORKSPACE/webofneeds/won-docker/bots/
+docker -H satsrv05:2375 build -t webofneeds/bots:int $WORKSPACE/webofneeds/won-docker/bots/
+docker -H satsrv06:2375 build -t webofneeds/bots:int $WORKSPACE/webofneeds/won-docker/bots/
+docker -H satsrv07:2375 build -t webofneeds/bots:int $WORKSPACE/webofneeds/won-docker/bots/
+
 
 # start the won containers on dedicated servers of the cluster
 echo run docker containers:
@@ -90,6 +96,10 @@ docker -H satsrv04:2375 run --name=wonnode_int1 -d -e "uri.host=satsrv04.researc
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -e "monitoring.output.dir=/usr/local/tomcat/won" \
 -e "monitoring.interval.seconds=60" \
+-p 9010:9010 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9010 -Djava.rmi.server.hostname=satsrv04.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m  -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/tomcat/temp/" \
+-m 350m -v /home/install/hdumps/node-int1:/usr/local/tomcat/temp/ \
 webofneeds/wonnode:int
 
 # wonnode 2
@@ -104,6 +114,10 @@ docker -H satsrv05:2375 run --name=wonnode_int2 -d -e "uri.host=satsrv05.researc
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -e "monitoring.output.dir=/usr/local/tomcat/won" \
 -e "monitoring.interval.seconds=60" \
+-p 9010:9010 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9010 -Djava.rmi.server.hostname=satsrv04.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m  -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/tomcat/temp/" \
+-m 350m -v /home/install/hdumps/node-int:/usr/local/tomcat/temp/ \
 webofneeds/wonnode:int
 
 # wonnode 3
@@ -118,6 +132,10 @@ docker -H satsrv04:2375 run --name=wonnode_int3 -d -e "uri.host=satsrv04.researc
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -e "monitoring.output.dir=/usr/local/tomcat/won" \
 -e "monitoring.interval.seconds=60" \
+-p 9012:9012 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9012 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9012 -Djava.rmi.server.hostname=satsrv04.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m  -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/tomcat/temp/" \
+-m 350m -v /home/install/hdumps/node-int3:/usr/local/tomcat/temp/ \
 webofneeds/wonnode:int
 
 # wonnode 4
@@ -132,6 +150,10 @@ docker -H satsrv05:2375 run --name=wonnode_int4 -d -e "uri.host=satsrv05.researc
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -e "monitoring.output.dir=/usr/local/tomcat/won" \
 -e "monitoring.interval.seconds=60" \
+-p 9012:9012 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9012 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9012 -Djava.rmi.server.hostname=satsrv05.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/tomcat/temp/" \
+-m 350m -v /home/install/hdumps/node-int4:/usr/local/tomcat/temp/ \
 webofneeds/wonnode:int
 
 
@@ -147,6 +169,10 @@ docker -H satsrv04:2375 run --name=owner_int -d -e "node.default.host=satsrv04.r
 -e "db.sql.jdbcDriverClass=org.postgresql.Driver" \
 -e "db.sql.jdbcUrl=jdbc:postgresql://satsrv04:5433/won_owner" \
 -e "db.sql.user=won" -e "db.sql.password=won" \
+-p 9011:9011 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9011 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9011 -Djava.rmi.server.hostname=satsrv04.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/tomcat/temp/mem-err.hprof" \
+-m 350m -v /home/install/hdumps/owner-int:/usr/local/tomcat/temp/ \
 webofneeds/owner:int
 
 # owner 2
@@ -159,13 +185,18 @@ docker -H satsrv05:2375 run --name=owner_int -d -e "node.default.host=satsrv05.r
 -e "db.sql.jdbcDriverClass=org.postgresql.Driver" \
 -e "db.sql.jdbcUrl=jdbc:postgresql://satsrv05:5433/won_owner" \
 -e "db.sql.user=won" -e "db.sql.password=won" \
+-p 9011:9011 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9011 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9011 -Djava.rmi.server.hostname=satsrv05.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/tomcat/temp/mem-err.hprof" \
+-m 350m -v /home/install/hdumps/owner-int:/usr/local/tomcat/temp/ \
 webofneeds/owner:int
 
 # bigdata
 docker -H satsrv06:2375 pull webofneeds/bigdata
 docker -H satsrv06:2375 stop bigdata_int || echo 'No docker container found to stop with name: bigdata_int'
 docker -H satsrv06:2375 rm bigdata_int || echo 'No docker container found to remove with name: bigdata_int'
-docker -H satsrv06:2375 run --name=bigdata_int -d -p 10000:9999 webofneeds/bigdata
+docker -H satsrv06:2375 run --name=bigdata_int -d -p 10000:9999 \
+-m 256m webofneeds/bigdata
 
 # matcher service
 docker -H satsrv06:2375 stop matcher_service_int || echo 'No docker container found to stop with name: matcher_service_int'
@@ -177,13 +208,20 @@ docker -H satsrv06:2375 run --name=matcher_service_int -d -e "node.host=satsrv06
 -e "wonNodeController.wonNode.crawl=https://satsrv04.researchstudio.at:8889/won/resource,https://satsrv04.researchstudio.at:8890/won/resource,https://satsrv05.researchstudio.at:8889/won/resource,https://satsrv05.researchstudio.at:8890/won/resource" \
 -e "cluster.local.port=2561" -e "cluster.seed.port=2561" -e "matcher.service.monitoring=true" \
 -p 2561:2561 \
+-p 9010:9010 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9010 -Djava.rmi.server.hostname=satsrv06.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m  -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/temp/mem-err.hprof" \
+-m 350m -v /home/install/hdumps/matcher-service-int:/usr/local/temp/ \
 webofneeds/matcher_service:int
 
 # siren solr server
 docker -H satsrv06:2375 pull webofneeds/sirensolr
 docker -H satsrv06:2375 stop sirensolr_int || echo 'No docker container found to stop with name: sirensolr_int'
 docker -H satsrv06:2375 rm sirensolr_int || echo 'No docker container found to remove with name: sirensolr_int'
-docker -H satsrv06:2375 run --name=sirensolr_int -d -p 7071:8080 -p 8984:8983 webofneeds/sirensolr
+docker -H satsrv06:2375 run --name=sirensolr_int -d -p 7071:8080 -p 8984:8983 \
+-p 9012:9012 \
+-e CATALINA_OPTS="-Xmx200m  -XX:MaxPermSize=150m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/temp/mem-err.hprof -Dcom.sun.management.jmxremote.port=9012 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9012 -Djava.rmi.server.hostname=satsrv06.researchstudio.at" \
+-m 350m webofneeds/sirensolr
 
 sleep 20
 
@@ -194,11 +232,15 @@ docker -H satsrv06:2375 run --name=matcher_siren_int -d -e "node.host=satsrv06.r
 -e "cluster.seed.host=satsrv06.researchstudio.at" -e "cluster.seed.port=2561" -e "cluster.local.port=2562" \
 -e "matcher.siren.uri.solr.server=http://satsrv06.researchstudio.at:8984/solr/won/" \
 -e "matcher.siren.uri.solr.server.public=http://satsrv06.researchstudio.at:8984/solr/#/won/" \
--e "matcher.siren.monitoring=true" \
+-p 9011:9011 \
+-e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9011 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9011 -Djava.rmi.server.hostname=satsrv06.researchstudio.at" \
+-e "JMEM_OPTS=-Xmx150m  -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/temp/mem-err.hprof" \
+-m 350m -v /home/install/hdumps/matcher-siren-int:/usr/local/temp/ \
 -p 2562:2562 webofneeds/matcher_siren:int
 
 
 sleep 20
+
 docker -H satsrv06:2375 stop need_creator_bot_int || echo 'No docker container found to stop with name: need_creator_bot_int'
 docker -H satsrv06:2375 rm need_creator_bot_int || echo 'No docker container found to remove with name: need_creator_bot_int'
 docker -H satsrv06:2375 run --name=need_creator_bot_int -d \
@@ -206,6 +248,7 @@ docker -H satsrv06:2375 run --name=need_creator_bot_int -d \
 -e "won.node.uris=https://satsrv04.researchstudio.at:8889/won/resource https://satsrv05.researchstudio.at:8889/won/resource https://satsrv04.researchstudio.at:8890/won/resource https://satsrv05.researchstudio.at:8890/won/resource" \
 -e "mail.directory.supply=R:/02 projekte aktuell/1305-USS WON-COIN/03 work/Scalability and Matching/corpora/freecycle-nyc-0414.sorted/supply"
 -e "mail.directory.demand=R:/02 projekte aktuell/1305-USS WON-COIN/03 work/Scalability and Matching/corpora/freecycle-nyc-0414.sorted/demand"
+-e "matcher.siren.monitoring=true" \
 -p 9013:9013 \
 -e "JMX_OPTS=-Dcom.sun.management.jmxremote.port=9013 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=9013 -Djava.rmi.server.hostname=satsrv06.researchstudio.at" \
 -e "JMEM_OPTS=-Xmx150m  -XX:MaxMetaspaceSize=150m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/temp/mem-err.hprof" \
